--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         minSdk 21
         targetSdk 32
         multiDexEnabled true
-        versionCode 3
-        versionName "1.0"
+        versionCode 4
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,14 +41,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
 
+    implementation 'com.applovin:applovin-sdk:11.6.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.12.0'
+    implementation 'com.applovin.mediation:facebook-adapter:6.12.0.2'
+    implementation 'com.applovin.mediation:unityads-adapter:4.5.0.1'
+    implementation 'com.startapp:applovin-mediation:1.+'
+
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
-    implementation 'com.facebook.android:audience-network-sdk:6.12.0'
     implementation 'com.google.ads.mediation:facebook:6.12.0.0'
-    implementation 'com.unity3d.ads:unity-ads:4.4.1'
-    implementation 'com.google.ads.mediation:unity:4.4.1.0'
-    implementation 'com.startapp:inapp-sdk:4.10.5'
-    implementation 'com.startapp:admob-mediation:2.0.0'
-    implementation 'com.google.ads.mediation:applovin:11.5.4.0'
+    implementation 'com.unity3d.ads:unity-ads:4.5.0'
+    implementation 'com.google.ads.mediation:unity:4.5.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
