--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.apsmarket.robiinternetoffer"
+        applicationId "com.mobileviw.robiinternetoffer"
         minSdk 21
         targetSdk 32
         multiDexEnabled true
-        versionCode 5
-        versionName "1.2"
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,14 +41,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
-
-    implementation 'com.google.android.gms:play-services-ads:21.4.0'
-    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
-    implementation 'com.facebook.android:audience-network-sdk:6.12.0'
-    implementation 'com.google.ads.mediation:facebook:6.12.0.0'
-    implementation 'androidx.annotation:annotation:1.5.0'
-    implementation 'com.unity3d.ads:unity-ads:4.5.0'
-    implementation 'com.google.ads.mediation:unity:4.5.0.0'
-    implementation 'com.google.ads.mediation:applovin:11.6.1.0'
     implementation 'com.google.android.play:core:1.10.3'
+
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
+    implementation 'com.google.ads.mediation:facebook:6.12.0.0'
+
+    implementation 'com.applovin:applovin-sdk:11.8.1'
+    implementation 'com.applovin.mediation:unityads-adapter:4.6.0.0'
+    implementation 'com.startapp:applovin-mediation:1.+'
+    implementation 'com.applovin.mediation:adcolony-adapter:4.8.0.3'
 }
