--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url 'https://artifacts.applovin.com/android'}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
