--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
 
     defaultConfig {
         applicationId "com.mobileviw.robiinternetoffer"
-        minSdk 21
+        minSdk 24
         targetSdk 32
         multiDexEnabled true
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,10 +39,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation 'com.google.android.ump:user-messaging-platform:2.0.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
     implementation 'com.google.android.play:core:1.10.3'
 
     implementation 'com.google.android.gms:play-services-ads:22.0.0'
     implementation 'com.google.ads.mediation:facebook:6.14.0.0'
+    implementation 'com.unity3d.ads:unity-ads:4.6.0'
+    implementation 'com.google.ads.mediation:unity:4.7.0.0'
 }
